--- a/static/style.css
+++ b/static/style.css
@@ -19,14 +19,17 @@ header h1 {
 }
 
 section#test {
-  position: fixed;
-  bottom: 30%;
+  position: relative;
+  top: 0px;
+  width: 300px;
+  background: rgba(255,255,255,0.5);
   padding-left: 100px;
   z-index: 2;
 }
 
-section#test button {
-  padding: 35px 50px;
+#testsvg {
+  width: 300px;
+  height: 300px;
 }
 
 section#map-sec {
