--- a/static/style.css
+++ b/static/style.css
@@ -32,6 +32,8 @@ section#test {
   width: 300px;
   height: 300px;
   background-color:transparent; 
+  cursor: pointer;
+  padding-top: 350px;
 
 }
 
@@ -47,5 +49,20 @@ section#map-sec {
   height: 100%;
   width: 100%;
 }
-
+/*Navbar toggle*/
+/*.navbar-default .navbar-toggle{
+  background-color: black;
+  border-color: black;
+}
+.navbar-toggle{
+  position: relative;
+}*/
+.navbar {
+  position: relative;
+  padding-left: 100px;
+  padding-top: 30px;
+  padding-bottom:;
+  z-index: 2;
+  background: rgba(0, 0, 0, 0);
+}
 
