--- a/static/style.css
+++ b/static/style.css
@@ -31,7 +31,7 @@ section#test {
 #testsvg {
   width: 300px;
   height: 300px;
-  background-color:transparent; 
+  background-color:transparent;
   cursor: pointer;
   padding-top: 350px;
 
@@ -65,4 +65,4 @@ section#map-sec {
   z-index: 2;
   background: rgba(0, 0, 0, 0);
 }
-
+/*Styles for fuzz overlay & message box*/
